Fixed height of CandidateEditForm modal on smaller screens

--- a/client/src/components/candidate/css/CandidateEditForm.module.css
+++ b/client/src/components/candidate/css/CandidateEditForm.module.css
@@ -11,7 +11,6 @@
 
 .container{
   width: 60%;
-  height: 80%;
   margin: 5rem auto 5rem auto;
   padding: 3rem 3rem 3rem 3rem;
   background: #fff;
